# homebridge-somfy-pico

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: release.yml
homebridge-plugin/: config.schema.json  jest.config.js  package-lock.json  package.json
homebridge-plugin/src/: BlindState.js  ButtonAccessory.js  SendCommand.js  SomfyRtsPlatform.js  SomfyRtsRemoteAccessory.js  WindowCoveringAccessory.js  index.js
homebridge-plugin/src/__mocks__/: fs.cjs  homebridge.js  net.js  serialport.js
homebridge-plugin/src/__tests__/: BlindState.test.js  ButtonAccessory.test.js  SendCommand.test.js  SomfyRtsPlatform.test.js  SomfyRtsRemoteAccessory.test.js  WindowCoveringAccessory.test.js
pico-firmware/: CMakeLists.txt  RpiGpioRts_pico.c  build-all.sh  lwipopts.h  rts_command.h  test.sh  wifi_transport.c  wifi_transport.h
pico-firmware/test/: CMakeLists.txt  test_RpiGpioRts.c
pico-firmware/test/stubs/hardware/: gpio.h
pico-firmware/test/stubs/pico/: stdlib.h
